# recruitee-mcp-server

./: .gitignore  LICENSE  README.md  pdf_to_markdown.py  pyproject.toml  requirements.txt
src/recruitee_mcp/: __init__.py  server.py
