[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recruitee-mcp-server"
version = "1.0.0"
description = "MCP server for Recruitee API to extract candidate profiles from pipelines with comprehensive PDF text extraction"
authors = [
    {name = "Contributors"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "typing-extensions>=4.0.0",
    "pdfplumber>=0.9.0",
    "aiofiles>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/pepuscz/recruitee-mcp-server"
Repository = "https://github.com/pepuscz/recruitee-mcp-server.git"
Issues = "https://github.com/pepuscz/recruitee-mcp-server/issues"

[project.scripts]
recruitee-mcp-server = "recruitee_mcp.server:main_sync"

[tool.setuptools.packages.find]
where = ["src"]
include = ["recruitee_mcp*"] 